<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/pendingReservations_id">


    <fragment
        android:id="@+id/pendingReservations_id"
        android:name="com.mad.poleato.PendingRequests.RequestsFragment"
        android:label="@string/title_actionbar_pendingReservations"
        tools:layout="@layout/pending_requests_recycler" >
        <action
            android:id="@+id/action_pendingReservations_id_to_signInActivity"
            app:destination="@id/signInActivity"
            app:popUpTo="@+id/signInActivity"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_pendingReservations_id_to_ride_id"
            app:destination="@id/rides_id"
            app:popUpTo="@+id/rides_id"
            app:enterAnim="@anim/fui_slide_in_right"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="true">
        </action>
        <action
            android:id="@+id/action_pendingReservations_id_to_editProfile_id"
            app:destination="@id/editProfile_id"
            app:popUpTo="@+id/editProfile_id"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/rides_id"
        android:name="com.mad.poleato.Ride.RideFragment"
        android:label="@string/title_actionbar_deliveryRide"
        tools:layout="@layout/ride_layout" >
        <action
            android:id="@+id/action_rides_id_to_signInActivity"
            app:destination="@id/signInActivity"
            app:popUpTo="@+id/signInActivity"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_ride_id_to_pendingReservations_id"
            app:destination="@id/pendingReservations_id"
            app:popUpTo="@+id/pendingReservations_id"
            app:popUpToInclusive="true">
        </action>
    </fragment>



    <fragment
        android:id="@+id/routes_id"
        android:name="com.mad.poleato.History.HistoryFragment"
        android:label="@string/title_actionbar_deliveryHistory"
        tools:layout="@layout/history_recyclerview" >
        <action
            android:id="@+id/action_routes_id_to_signInActivity"
            app:destination="@id/signInActivity"
            app:popUpTo="@+id/signInActivity"
            app:popUpToInclusive="true" />
    </fragment>



    <fragment
        android:id="@+id/statistics_id"
        android:name="com.mad.poleato.Statistics.StatisticsFragment"
        android:label="@string/title_actionbar_deliveryStatistics"
        tools:layout="@layout/statistics_layout" >
        <action
            android:id="@+id/action_statisticsFragment_to_signInActivity"
            app:destination="@id/signInActivity"
            app:popUpTo="@+id/signInActivity"
            app:popUpToInclusive="true" />
    </fragment>



    <fragment
        android:id="@+id/mainProfile_id"
        android:name="com.mad.poleato.Account.MainProfile"
        android:label="@string/title_actionbar_account"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_mainProfile_id_to_editProfile_id"
            app:destination="@id/editProfile_id"
            app:enterAnim="@anim/fui_slide_in_right"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mainProfile_id_to_signInActivity"
            app:destination="@id/signInActivity"
            app:popUpTo="@+id/signInActivity"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/editProfile_id"
        android:name="com.mad.poleato.Account.EditProfile"
        android:label="@string/title_actionbar_edit_account"
        tools:layout="@layout/fragment_edit_profile">
        <action
            android:id="@+id/action_editProfile_id_to_mainProfile_id"
            app:destination="@id/mainProfile_id"
            app:popUpTo="@+id/mainProfile_id"
            app:popUpToInclusive="true" />
    </fragment>

    <activity
        android:id="@+id/signInActivity"
        android:name="com.mad.poleato.SignActivities.SignInActivity"
        android:label="signin_layout"
        tools:layout="@layout/signin_layout" />

</navigation>