<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NavigatorActivity"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/childView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/delivery_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/phone"
                android:src="@drawable/ic_baseline_directions_bike_24px"
                app:layout_constraintBottom_toTopOf="@id/restaurant_label"
                app:layout_constraintEnd_toStartOf="@id/orderID_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/orderID_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/orderID_label"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/delivery_icon"
                app:layout_constraintEnd_toStartOf="@id/orderID_tv"
                app:layout_constraintStart_toEndOf="@id/delivery_icon"
                app:layout_constraintTop_toTopOf="@id/delivery_icon" />

            <TextView
                android:id="@+id/orderID_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColor="@color/browser_actions_title_color"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/delivery_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/orderID_label"
                app:layout_constraintTop_toTopOf="@id/delivery_icon" />

            <TextView
                android:id="@+id/restaurant_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/customer_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/date_label"
                app:layout_constraintEnd_toStartOf="@id/restaurant_tv"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="@id/delivery_icon"
                app:layout_constraintTop_toBottomOf="@id/delivery_icon" />

            <TextView
                android:id="@+id/restaurant_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/browser_actions_title_color"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/restaurant_label"
                app:layout_constraintEnd_toStartOf="@id/restaurantAddress_label"
                app:layout_constraintStart_toEndOf="@+id/restaurant_label"
                app:layout_constraintTop_toTopOf="@id/restaurant_label" />

            <TextView
                android:id="@+id/restaurantAddress_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/restaurant_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/restaurant_tv"
                app:layout_constraintEnd_toStartOf="@id/restaurantAddress_tv"
                app:layout_constraintStart_toEndOf="@id/restaurant_tv"
                app:layout_constraintTop_toTopOf="@id/restaurant_tv" />

            <TextView
                android:id="@+id/restaurantAddress_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColor="@color/browser_actions_title_color"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/restaurantAddress_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/restaurantAddress_label"
                app:layout_constraintTop_toTopOf="@id/restaurantAddress_label" />

            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/delivered_date"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/expectedTime_label"
                app:layout_constraintEnd_toStartOf="@+id/date_tv"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/restaurant_label"
                app:layout_constraintTop_toBottomOf="@id/restaurant_label" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColor="@color/browser_actions_title_color"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/date_label"
                app:layout_constraintEnd_toStartOf="@id/cost_label"
                app:layout_constraintStart_toEndOf="@id/date_label"
                app:layout_constraintTop_toTopOf="@id/date_label" />

            <TextView
                android:id="@+id/cost_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/total_cost"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/date_tv"
                app:layout_constraintEnd_toStartOf="@id/cost_tv"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/restaurantAddress_label"
                app:layout_constraintTop_toTopOf="@id/date_tv" />

            <TextView
                android:id="@+id/cost_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColor="@color/browser_actions_title_color"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/cost_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cost_label"
                app:layout_constraintTop_toTopOf="@id/cost_label" />

            <TextView
                android:id="@+id/expectedTime_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/expected_hour"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/expectedTime_tv"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/date_label"
                app:layout_constraintTop_toBottomOf="@id/date_label" />

            <TextView
                android:id="@+id/expectedTime_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColor="@color/browser_actions_title_color"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/expectedTime_label"
                app:layout_constraintEnd_toStartOf="@id/deliveredTime_label"
                app:layout_constraintStart_toEndOf="@id/expectedTime_label"
                app:layout_constraintTop_toTopOf="@id/expectedTime_label" />

            <TextView
                android:id="@+id/deliveredTime_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/delivered_hour"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/expectedTime_tv"
                app:layout_constraintEnd_toStartOf="@id/deliveredTime_tv"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/cost_label"
                app:layout_constraintTop_toTopOf="@id/expectedTime_tv" />

            <TextView
                android:id="@+id/deliveredTime_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColor="@color/browser_actions_title_color"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/deliveredTime_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/deliveredTime_label"
                app:layout_constraintTop_toTopOf="@id/deliveredTime_label" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>