<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPanelPrimary">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/signin_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignInActivity">

        <ImageButton
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorPanelPrimary"
            android:src="@mipmap/delivery_icon"
            app:layout_constraintBottom_toTopOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="108dp"
            android:layout_marginBottom="40dp"
            android:text="PolEATo"
            android:textColor="#ffffff"
            android:textSize="80sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toTopOf="@id/google_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_icon"
            tools:ignore="HardcodedText" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            android:elevation="@dimen/default_gap"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/facebook_button"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            android:elevation="@dimen/default_gap"
            app:layout_constraintTop_toBottomOf="@id/google_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tiEmail"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiEmail"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:theme="@style/FloatLabelSignInUp"
            app:layout_constraintBottom_toTopOf="@id/tiPassword"
            app:layout_constraintEnd_toStartOf="@id/cancel_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/facebook_button">

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:singleLine="true"
                android:textColor="@color/colorBodyPrimary"
                tools:ignore="Autofill" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/cancel_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete"
            android:onClick="clearText"
            android:src="@drawable/clear"
            app:layout_constraintBottom_toBottomOf="@id/tiEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tiEmail"
            app:layout_constraintTop_toTopOf="@id/tiEmail" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiPassword"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="32dp"
            android:theme="@style/FloatLabelSignInUp"
            app:layout_constraintTop_toBottomOf="@id/tiEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancel_password"
            app:layout_constraintBottom_toTopOf="@id/ButtonSignIn">

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="40"
                android:singleLine="true"
                android:textColor="@color/colorTextSubField"
                tools:ignore="Autofill" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/cancel_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete"
            android:onClick="clearText"
            android:src="@drawable/clear"
            app:layout_constraintBottom_toBottomOf="@id/tiPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tiPassword"
            app:layout_constraintTop_toTopOf="@id/tiPassword" />

        <Button
            android:id="@+id/ButtonSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/signin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ButtonSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tiPassword" />

        <Button
            android:id="@+id/ButtonSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ButtonSignIn"
            app:layout_constraintTop_toTopOf="@id/ButtonSignIn" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>